fix: resolve issues with wrapping and sizing on ranking page.

--- a/blocks/blade/blade.css
+++ b/blocks/blade/blade.css
@@ -47,7 +47,8 @@
   text-decoration-color: var(--link-color);
 }
 
-.blade.ranking img {
+.blade.ranking picture {
+  display: block;
   height: 140px;
   width: 140px;
 }
